--- a/Hands_on_Notebook_ExploratoryDataAnalysis.ipynb
+++ b/Hands_on_Notebook_ExploratoryDataAnalysis.ipynb
@@ -1407,13 +1407,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "p6TCTCDAzUmR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "297eb9ab-6b37-46de-e29b-d0c406704bfb"
+        "outputId": "3b4d40e3-ccac-4d16-e8d7-e019131f62ee"
       },
       "outputs": [
         {
@@ -1468,13 +1468,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "fO9oCJoazRM9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c70f059-4089-452e-db35-36e1b018aaef"
+        "outputId": "99e659c0-9672-4afc-9adc-65e4d6af8287"
       },
       "outputs": [
         {
@@ -1503,7 +1503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "IRBahRHNJVgl"
       },
@@ -1527,24 +1527,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "cCqbJH8T1tJJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
         },
-        "outputId": "313d079c-e641-420b-8ab7-485dd84569e0"
+        "outputId": "55757ab2-b1f1-4789-af9b-1694dda56510"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "                  count        mean        std       min        25%  \\\n",
+              "Rooms         27103.000       2.992      0.955     1.000      2.000   \n",
+              "Distance      27102.000      11.280      6.784     0.000      6.400   \n",
+              "Postcode      27102.000    3113.787    111.129  3000.000   3046.000   \n",
+              "Bedroom       20678.000       3.046      0.955     0.000      2.000   \n",
+              "Bathroom      20672.000       1.592      0.701     0.000      1.000   \n",
+              "Car           20297.000       1.716      0.994     0.000      1.000   \n",
+              "Landsize      17873.000     560.537   1411.309    50.000    220.000   \n",
+              "BuildingArea  10529.000     154.512    130.584    11.000    101.000   \n",
+              "YearBuilt     11985.000    1966.618     36.042  1850.000   1950.000   \n",
+              "Propertycount 27103.000    7564.741   4494.028    83.000   4294.000   \n",
+              "Price         27103.000 1050664.131 641660.161 85000.000 635000.000   \n",
+              "\n",
+              "                     50%         75%          max  \n",
+              "Rooms              3.000       4.000       16.000  \n",
+              "Distance          10.500      14.000       48.100  \n",
+              "Postcode        3088.000    3153.000     3978.000  \n",
+              "Bedroom            3.000       4.000       20.000  \n",
+              "Bathroom           1.000       2.000        9.000  \n",
+              "Car                2.000       2.000       18.000  \n",
+              "Landsize         513.000     664.000    76000.000  \n",
+              "BuildingArea     133.000     183.000     6791.000  \n",
+              "YearBuilt       1970.000    2000.000     2019.000  \n",
+              "Propertycount   6567.000   10412.000    21650.000  \n",
+              "Price         871000.000 1300000.000 11200000.000  "
+            ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ef3f1b8d-1b53-4f72-8f62-3c420d6a8271\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "  <div id=\"df-e345e830-cd7e-4e0c-afcd-bac3e4cad75d\" class=\"colab-df-container\">\n",
+              "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -1697,21 +1723,21 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ef3f1b8d-1b53-4f72-8f62-3c420d6a8271')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e345e830-cd7e-4e0c-afcd-bac3e4cad75d')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
               "  </svg>\n",
-              "      </button>\n",
-              "      \n",
+              "    </button>\n",
+              "\n",
               "  <style>\n",
               "    .colab-df-container {\n",
               "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
               "      gap: 12px;\n",
               "    }\n",
               "\n",
@@ -1733,6 +1759,10 @@
               "      fill: #174EA6;\n",
               "    }\n",
               "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
               "    [theme=dark] .colab-df-convert {\n",
               "      background-color: #3B4455;\n",
               "      fill: #D2E3FC;\n",
@@ -1746,49 +1776,162 @@
               "    }\n",
               "  </style>\n",
               "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-ef3f1b8d-1b53-4f72-8f62-3c420d6a8271 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-e345e830-cd7e-4e0c-afcd-bac3e4cad75d button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ef3f1b8d-1b53-4f72-8f62-3c420d6a8271');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-e345e830-cd7e-4e0c-afcd-bac3e4cad75d');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
               "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
               "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "                  count        mean  ...         75%          max\n",
-              "Rooms         27103.000       2.992  ...       4.000       16.000\n",
-              "Distance      27102.000      11.280  ...      14.000       48.100\n",
-              "Postcode      27102.000    3113.787  ...    3153.000     3978.000\n",
-              "Bedroom       20678.000       3.046  ...       4.000       20.000\n",
-              "Bathroom      20672.000       1.592  ...       2.000        9.000\n",
-              "Car           20297.000       1.716  ...       2.000       18.000\n",
-              "Landsize      17873.000     560.537  ...     664.000    76000.000\n",
-              "BuildingArea  10529.000     154.512  ...     183.000     6791.000\n",
-              "YearBuilt     11985.000    1966.618  ...    2000.000     2019.000\n",
-              "Propertycount 27103.000    7564.741  ...   10412.000    21650.000\n",
-              "Price         27103.000 1050664.131  ... 1300000.000 11200000.000\n",
               "\n",
-              "[11 rows x 8 columns]"
+              "\n",
+              "<div id=\"df-fe9acca6-8908-49f0-bd2e-ba9c1f11e17f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fe9acca6-8908-49f0-bd2e-ba9c1f11e17f')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-fe9acca6-8908-49f0-bd2e-ba9c1f11e17f button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
             ]
           },
           "metadata": {},
@@ -1816,13 +1959,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "zaEUQ1Ng_9vo",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1385dc99-e9ec-4c22-d40a-4c0c28d27fc8"
+        "outputId": "74b1fc7f-5d2a-498f-ce0e-19c787b95591"
       },
       "outputs": [
         {
@@ -1861,13 +2004,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "tuEDP6sd1vEU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ceddce35-26fe-404c-f457-dc3938f2a4be"
+        "outputId": "58823627-8077-4680-c4e1-f4660e7492a5"
       },
       "outputs": [
         {
@@ -1930,13 +2073,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "DejV6efOBwri",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b8692e46-06a1-4456-9bc3-d377eb5b2c07"
+        "outputId": "3d308b56-2c8f-4524-c9ce-03f8baa4a4bb"
       },
       "outputs": [
         {
